# XXR_YZY_bot

./: .gitignore  README.md  app.py  manage.py  pyproject.toml
admin/: api.py  db.py  models.py
admin_app/: app.py  settings.py  urls.py
admin_app/accounts/: admin.py  apps.py  models.py
admin_app/accounts/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_telegram_id.py  0004_rename_phone_number_user_contact.py  0005_alter_user_is_staff.py  0006_user_get_notifications_orders.py  0007_remove_useractivity_device_and_more.py  0008_alter_useractivity_created_at_and_more.py  0009_user_percentage_of_profit.py  0010_alter_user_percentage_of_profit_promocodeusage_and_more.py  0011_remove_user_avatar.py
admin_app/bot/: admin.py  apps.py  models.py
admin_app/bot/migrations/: 0001_initial.py  0002_bot_message_id.py  0002_category_order_tariff_order.py  0003_study_alter_bot_message_id.py  0004_alter_bot_text.py  0005_category_tariff.py  0006_delete_study_tariff_category.py
admin_app/orders/: admin.py  apps.py  models.py
admin_app/orders/migrations/: 0001_initial.py  0002_promocodeusage_order.py  0003_promocodeusage_discount_amount.py  (+45 more)
app/: config.py  functions.py  main.py  repository.py  webhook.py
app/bot/: bot.py  dp.py
app/core/: config.py  db.py
app/crud/: conversion.py  order.py  sysdata.py  user.py
app/db/: admin.py  base.py  db.py  utils.py
app/middlewares/: auth.py  cache.py
app/schemas/: conversion.py  order.py  sysdata.py  user.py
bot/: config.py  loader.py  main.py
bot/handlers/: exchange.py  other.py  profile.py  start.py  training.py
migrations/models/: 0_20241115002604_init.py  0_20241117015148_init.py
tests/: test_orders.py
(+27 files in other folders)
